use alternative way of supplying libconflate subdir if it's bundled
this fixes automake complains at ./autogen.sh time when libconflate is not bundled

--- a/configure.ac
+++ b/configure.ac
@@ -206,7 +206,7 @@ if test "x$conflate_pkg_not_found" = "xyes"; then
     CONFLATE_LIBS="-Llibconflate -lconflate"
     CONFLATE_CFLAGS="-Ilibconflate $libstrophe_CFLAGS -Ilibconflate/libstrophe"
     BUILD_WITH_CONFLATE=yes
-    BUILD_BUNDLED_CONFLATE=yes
+    AC_SUBST([MAYBE_LIBCONFLATE], [libconflate])
   else
     if test "x$with_libconflate" != xcheck; then
       AC_MSG_FAILURE([--with-libconflate was given, but pkg-config package for libconflate is missing])
@@ -215,7 +215,6 @@ if test "x$conflate_pkg_not_found" = "xyes"; then
     AC_MSG_NOTICE([support for libconflate XMPP management will be disabled])
   fi
 fi
-AM_CONDITIONAL([BUILD_BUNDLED_CONFLATE], [test "x$BUILD_BUNDLED_CONFLATE" = xyes])
 AM_CONDITIONAL([BUILD_WITH_CONFLATE], [test "x$BUILD_WITH_CONFLATE" = xyes])
 
 trylibeventdir=""
