don't use systemwide conflate database for tests and unlink local config so that tests are 100% deterministic

--- a/.gitignore
+++ b/.gitignore
@@ -58,4 +58,4 @@ libmemcached-*/libmemcached/*.lo
 libmemcached-*/libmemcached/*.la
 libmemcached-*/libmemcached/libmemcached_config.h
 .buildbot/*
-
+/t/check_moxi_agent.cfg
