--- a/scripts/rpm/moxi.spec.in
+++ b/scripts/rpm/moxi.spec.in
@@ -33,7 +33,7 @@ of the memcached protocol whole for clients.
 %setup -q
 
 %build
-CONFLATE_DB_PATH=/var/lib/moxi %configure --disable-coverage --disable-debug --disable-shared --without-memcached
+CONFLATE_DB_PATH=/var/lib/moxi %configure --disable-coverage --disable-debug --disable-shared --without-memcached --with-bundled-libstrophe --with-libconflate=bundled
 
 make %{?_smp_mflags}
 
