fixed CONFLATE_DB_PATH handling
We have to pass -DCONFLATE_DB_PATH via Makefile,
'cause $localstatedir references ${prefix} in way that allows user
change prefix after ./configure time and that makes it incompatible
with defines via config.h.

--- a/Makefile.am
+++ b/Makefile.am
@@ -70,8 +70,7 @@ moxi_SOURCES += solaris_priv.c
 endif
 
 moxi_debug_SOURCES = $(moxi_SOURCES)
-moxi_debug_CPPFLAGS = -I$(top_srcdir)/libmemcached-0.30 \
-                      -I$(top_srcdir)/../libstrophe
+moxi_debug_CPPFLAGS = -I$(top_srcdir)/libmemcached-0.30 -DCONFLATE_DB_PATH=\"$(CONFLATE_DB_PATH)\"
 moxi_CPPFLAGS = -DNDEBUG $(moxi_debug_CPPFLAGS)
 moxi_debug_LDADD = @PROFILER_LDFLAGS@ \
                    libmemcached-0.30/libmemcached/libmemcached.la
