--- a/configure.ac
+++ b/configure.ac
@@ -467,9 +467,8 @@ fi
 AC_ARG_VAR([CONFLATE_DB_PATH], [Directory for libconflate config database (default $prefix/var/lib/]AC_PACKAGE_NAME[)])
 if test "x$BUILD_WITH_CONFLATE" = "xyes"; then
   if test "x$CONFLATE_DB_PATH" = x; then
-    CONFLATE_DB_PATH=$localstatedir/lib/$PACKAGE
+    CONFLATE_DB_PATH="$localstatedir/lib/$PACKAGE"
   fi
-  AC_DEFINE_UNQUOTED([CONFLATE_DB_PATH], ["$CONFLATE_DB_PATH"], [directory for libconflate config database])
 fi
 
 AC_SUBST([DATE], [`LANG=C date -R`])
