--- a/.gitmodules
+++ b/.gitmodules
@@ -1,3 +1,3 @@
 [submodule "libconflate"]
 	path = libconflate
-	url = git://github.com/alk/libconflate.git
+	url = git://github.com/northscale/libconflate.git
