vbucketServerMap now vBucketServerMap, bug 1252

--- a/t/vbucket_rest1.cfg
+++ b/t/vbucket_rest1.cfg
@@ -1,5 +1,5 @@
 {
-  "vbucketServerMap": {
+  "vBucketServerMap": {
     "hashAlgorithm": "CRC",
     "numReplicas": 1,
     "serverList": ["localhost:11311", "localhost:11312"],
