Fixed version.m4 entry in .gitignore.
Note that I've got a bit of emacs config that auto-sorts .gitignore as
well.  It's for the better.

Change-Id: I098916446b31b185bd265cfddb7fdee87649807c
Reviewed-on: http://review.northscale.com:8080/451
Tested-by: Steve Yen <steve.yen@gmail.com>
Reviewed-by: Steve Yen <steve.yen@gmail.com>

--- a/.gitignore
+++ b/.gitignore
@@ -1,67 +1,67 @@
 *.[ao]
-*.gcov
 *.gcda
 *.gcno
+*.gcov
 *.tcov
+*~
+.buildbot/*
 .deps
 /GPATH
 /GRTAGS
 /GSYMS
 /GTAGS
 /ID
+/check_moxi
+/check_moxi_agent
+/check_util
+/check_work
+/debian/changelog
+/doc/doxy
+/m4/version.m4
+/memcached.spec
+/scripts/rpm/moxi.spec
+/sizes
+/t/check_moxi_agent.cfg
+/testapp
+/timedrun
+/tmp
+/version.num
 INSTALL
 Makefile
 Makefile.in
-/debian/changelog
-/scripts/rpm/moxi.spec
-/tmp
+TAGS
+aclocal.m4
+autom4te.cache
+compile
 config.guess
 config.h
 config.h.in
 config.log
 config.status
 config.sub
-aclocal.m4
-compile
-autom4te.cache
 configure
+cscope.out
 depcomp
+doc/protocol-binary-range.txt
+doc/protocol-binary.txt
 install-sh
+libmemcached-*/libmemcached/*.la
+libmemcached-*/libmemcached/*.lo
+libmemcached-*/libmemcached/.libs/
+libmemcached-*/libmemcached/libmemcached_config.h
+libtool
+ltmain.sh
 memcached
+memcached-*.tar.gz
 memcached-debug
 memcached-debug.profile
+memcached_dtrace.h
+missing
 moxi
+moxi-*.tar.gz
 moxi-debug
 moxi-debug.profile
-missing
+moxi_*.tar.gz
 stamp-h1
 stamp-h2
 tags
-TAGS
-cscope.out
-memcached_dtrace.h
-*~
-memcached-*.tar.gz
-moxi-*.tar.gz
-moxi_*.tar.gz
-doc/protocol-binary-range.txt
-doc/protocol-binary.txt
-/sizes
-/version.m4
-/version.num
-/testapp
-/timedrun
-/doc/doxy
-/check_util
-/check_moxi
-/check_moxi_agent
-/check_work
-ltmain.sh
-libtool
-libmemcached-*/libmemcached/.libs/
-libmemcached-*/libmemcached/*.lo
-libmemcached-*/libmemcached/*.la
-libmemcached-*/libmemcached/libmemcached_config.h
-.buildbot/*
-/t/check_moxi_agent.cfg
-/memcached.spec
