b2b upstream & downstream for simple, non-quiet commands
Change-Id: I25c4e4a4fa1cac101aa19853f47857914dfc0836
Reviewed-on: http://review.northscale.com:8080/687
Tested-by: Steve Yen <steve.yen@gmail.com>
Reviewed-by: Steve Yen <steve.yen@gmail.com>

--- a/Makefile.am
+++ b/Makefile.am
@@ -27,9 +27,11 @@ moxi_SOURCES = memcached.c memcached.h \
                     redirects.h \
                     cproxy.c cproxy.h \
                     cproxy_config.c \
-                    cproxy_protocol.c \
+                    cproxy_protocol_a.c \
                     cproxy_protocol_a2a.c \
                     cproxy_protocol_a2b.c \
+                    cproxy_protocol_b.c \
+                    cproxy_protocol_b2b.c \
                     cproxy_multiget.c \
                     cproxy_stats.c \
                     cproxy_front.c \
