Added fixes for 'make dist' to work properly
Change-Id: I2e81a04f07e6acf246d740e86ca2926f885c18b3
author: CaptTofu <patg@patg.net>
Reviewed-on: http://review.northscale.com/1299
Reviewed-by: Aliaksey Kandratsenka <alkondratenko@gmail.com>
Tested-by: Steve Yen <steve.yen@gmail.com>

--- a/Makefile.am
+++ b/Makefile.am
@@ -115,7 +115,7 @@ memcached_debug_dtrace.o: $(moxi_debug_OBJECTS)
 SUBDIRS = doc $(MAYBE_LIBCONFLATE)
 DIST_SUBDIRS = doc $(MAYBE_LIBCONFLATE)
 DIST_DIRS = scripts
-EXTRA_DIST = doc scripts TODO t memcached.spec memcached_dtrace.d version.m4 protocol_binary.h patches debian
+EXTRA_DIST = doc scripts TODO t memcached_dtrace.d m4/version.m4 protocol_binary.h patches debian
 
 MOSTLYCLEANFILES = *.gcov *.gcno *.gcda *.tcov
 
