Logging APIs for Moxi
Change-Id: Icec33838a2f2a165ef0a0ac332f83eb9070b5dfb
Reviewed-on: http://review.northscale.com/1296
Reviewed-by: Steve Yen <steve.yen@gmail.com>
Tested-by: Steve Yen <steve.yen@gmail.com>

--- a/Makefile.am
+++ b/Makefile.am
@@ -37,7 +37,8 @@ moxi_SOURCES = memcached.c memcached.h \
                     matcher.c matcher.h \
                     murmur_hash.c \
                     mcs.c mcs.h \
-                    stdin_check.c stdin_check.h
+                    stdin_check.c stdin_check.h \
+                    log.c log.h
 
 timedrun_SOURCES = timedrun.c
 
