Check for getrlimit in configure
Change-Id: I061406fc805cfe1ab6f0a3fc41b069fd07a8f79f
Reviewed-on: http://review.northscale.com/1554
Reviewed-by: Steve Yen <steve.yen@gmail.com>
Tested-by: Aliaksey Kandratsenka <alkondratenko@gmail.com>

--- a/configure.ac
+++ b/configure.ac
@@ -207,6 +207,8 @@ AS_IF(test "x$ac_cv_header_winsock2_h" = "xyes",
        AM_CXXFLAGS="$AM_CXXFLAGS $NO_WERROR"
       ])
 
+AC_CHECK_FUNCS_ONCE(getrlimit)
+
 AM_CONDITIONAL([BUILD_TESTAPPS], [test "x$ac_cv_header_winsock2_h" = "xno"])
 AM_CONDITIONAL([BUILD_DAEMON], [test "x$ac_cv_header_winsock2_h" = "xno"])
 
