don't disable assertions
Change-Id: I41783c84a1e36d0ac4208bb3396c7e1928a64a46
Reviewed-on: http://review.northscale.com/1795
Tested-by: Steve Yen <steve.yen@gmail.com>
Reviewed-by: Steve Yen <steve.yen@gmail.com>

--- a/Makefile.am
+++ b/Makefile.am
@@ -79,7 +79,7 @@ if BUILD_SOLARIS_PRIVS
 moxi_SOURCES += solaris_priv.c
 endif
 
-moxi_CPPFLAGS = -DNDEBUG -DCONFLATE_DB_PATH=\"$(CONFLATE_DB_PATH)\"
+moxi_CPPFLAGS = -DCONFLATE_DB_PATH=\"$(CONFLATE_DB_PATH)\"
 moxi_LDADD =
 moxi_LDFLAGS = $(LTLIBEVENT) $(LTLIBCONFLATE) $(LTLIBHASHKIT)
 moxi_DEPENDENCIES =
