bug 1998 - always start with NULL bucket
but switch upstream client conn to default bucket on connection
creation as needed.

Change-Id: I149fa6bf217f0d63248bc4d2d61354e51192fcef

--- a/t/moxi_multitenancy_rest_default.cfg
+++ b/t/moxi_multitenancy_rest_default.cfg
@@ -3,6 +3,8 @@
     "vBucketServerMap": {
       "hashAlgorithm": "CRC",
       "numReplicas": 0,
+      "user": "default",
+      "password": "",
       "serverList": ["127.0.0.1:11311"],
       "vBucketMap":
         [ [0] ]
