fixed make dist
Change-Id: I488b8eb3b35a9e67b97bec7b6c2eac4c84b52967
Reviewed-on: http://review.northscale.com/2138
Reviewed-by: Matt Ingenthron <matt@northscale.com>
Tested-by: Matt Ingenthron <matt@northscale.com>

--- a/Makefile.am
+++ b/Makefile.am
@@ -12,33 +12,34 @@ BUILT_SOURCES =
 testapp_SOURCES = testapp.c util.c util.h
 
 moxi_SOURCES = memcached.c memcached.h \
-					genhash.c genhash.h genhash_int.h \
-                    hash.c hash.h \
-                    slabs.c slabs.h \
-                    items.c items.h \
-                    assoc.c assoc.h \
-                    thread.c \
-                    stats.c stats.h \
-                    util.c util.h \
-                    trace.h cache.h \
-                    work.c work.h \
-                    redirects.h \
-                    cproxy.c cproxy.h \
-                    cproxy_config.c \
-                    cproxy_protocol_a.c \
-                    cproxy_protocol_a2a.c \
-                    cproxy_protocol_a2b.c \
-                    cproxy_protocol_b.c \
-                    cproxy_protocol_b2b.c \
-                    cproxy_multiget.c \
-                    cproxy_stats.c \
-                    cproxy_front.c \
-                    matcher.c matcher.h \
-                    murmur_hash.c \
-                    mcs.c mcs.h \
-                    stdin_check.c stdin_check.h \
-                    log.c log.h \
-                    cJSON.c cJSON.h
+               genhash.c genhash.h genhash_int.h \
+	       hash.c hash.h \
+	       slabs.c slabs.h \
+	       items.c items.h \
+	       assoc.c assoc.h \
+	       thread.c \
+	       stats.c stats.h \
+	       util.c util.h \
+	       trace.h cache.h \
+	       work.c work.h \
+	       redirects.h \
+	       cproxy.c cproxy.h \
+	       cproxy_config.c \
+	       cproxy_protocol_a.c \
+	       cproxy_protocol_a2a.c \
+	       cproxy_protocol_a2b.c \
+	       cproxy_protocol_b.c \
+	       cproxy_protocol_b2b.c \
+	       cproxy_multiget.c \
+	       cproxy_stats.c \
+	       cproxy_front.c \
+	       matcher.c matcher.h \
+	       murmur_hash.c \
+	       mcs.c mcs.h \
+	       stdin_check.c stdin_check.h \
+	       log.c log.h \
+	       cJSON.c cJSON.h \
+	       config_static.h
 
 if BUILD_DAEMON
 moxi_SOURCES += daemon.c
@@ -95,7 +96,7 @@ CLEANFILES=
 SUBDIRS = doc $(MAYBE_LIBCONFLATE)
 DIST_SUBDIRS = doc $(MAYBE_LIBCONFLATE)
 DIST_DIRS = scripts
-EXTRA_DIST = doc scripts TODO t m4/version.m4 protocol_binary.h patches debian
+EXTRA_DIST = doc scripts TODO t m4/version.m4 protocol_binary.h win32 debian TODO.moxi LICENSE Doxyfile HACKING
 
 MOSTLYCLEANFILES = *.gcov *.gcno *.gcda *.tcov
 
