bug 2231 - MOXI_USE_LIBVBUCKET and MOXI_USE_LIBMEMCACHED
Change-Id: I29c6e647aab50ee6510951487e107ce3d8480514
Reviewed-on: http://review.northscale.com/2174
Reviewed-by: Steve Yen <steve.yen@gmail.com>
Tested-by: Steve Yen <steve.yen@gmail.com>

--- a/Makefile.am
+++ b/Makefile.am
@@ -89,9 +89,11 @@ moxi_LDADD =
 moxi_LDFLAGS = $(LTLIBEVENT) $(LTLIBCONFLATE) $(LTLIBHASHKIT)
 moxi_DEPENDENCIES =
 
-if MOXI_USE_VBUCKET
+if MOXI_USE_LIBVBUCKET
 moxi_LDFLAGS += $(LTLIBVBUCKET)
-else
+endif
+
+if MOXI_USE_LIBMEMCACHED
 moxi_LDFLAGS += $(LTLIBMEMCACHED)
 endif
 
