Skip check for malloc and realloc
Change-Id: I21ed07ed90e1ccc6fffd6b1336fb0ab6d37df7ba
Reviewed-on: http://review.northscale.com/2366
Reviewed-by: Steve Yen <steve.yen@gmail.com>
Tested-by: Steve Yen <steve.yen@gmail.com>

--- a/configure.ac
+++ b/configure.ac
@@ -7,6 +7,10 @@ AM_CONFIG_HEADER([config.h])
 AC_CONFIG_MACRO_DIR([m4])
 AC_DISABLE_STATIC
 
+# the malloc tests seems to be broken for cross compilation.. ignore them
+ac_cv_func_malloc_0_nonnull=yes
+ac_cv_func_realloc_0_nonnull=yes
+
 PANDORA_CANONICAL_TARGET(less-warnings, warnings-always-on, force-gcc42)
 
 AC_PROG_CC_C99
